--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background-color: #2f3035;
-    background-image: url(images/background-adare-restaurant.jpg);
+    background-image: url(https://www.adaremanor.com/wp-content/uploads/2020/12/oak-room-menu-2-1920x1080-fp_mm-fpoff_0_0.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
